--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/b9330691ee.js" crossorigin="anonymous"></script>
     <title>Tic-Tac-Toe</title>
 </head>
 
-<body>
-    <div class="container mx-auto">
-        <div class="flex flex-col justify-center items-center">
-            <div class="grid grid-cols-3" id="main-container">
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span id="s1" > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
-                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl" id="box"><span > </span></div>
+<body class="bg-[#f9fbfe]">
+    <div class="container mx-auto ">
+        <div class="flex flex-col justify-center items-center gap-4 my-3 ">
+            <h1 class="text-5xl font-semibold antialiased italic"> Tic <span class="text-sky-400"> Tac</span>
+                 Toe <span><i class="fa-solid fa-dice-d6 text-sky-400" ></i></span></h1>
+            <div class="grid grid-cols-3 text-white" id="main-container">
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-400 hover:bg-sky-300 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-300 hover:bg-sky-400 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-400 hover:bg-sky-300 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-300 hover:bg-sky-400 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-400 hover:bg-sky-300 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-300 hover:bg-sky-400 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-400 hover:bg-sky-300 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-300 hover:bg-sky-400 cursor-pointer" id="box"><span class="span-box"> </span></div>
+                <div class="border-2 h-24 w-24 border-current flex flex-row justify-center items-center text-5xl bg-sky-400 hover:bg-sky-300 cursor-pointer" id="box"><span class="span-box"> </span></div>
             </div>
-            <div>
-
-                <p id="p-turn"> player turn : </p>
+            <div class="flex flex-col gap-6 font-bold">
+                <p id="playerTurn"> </p>
                 <p id="status">  </p>
+                <div class="hidden border-2" id="gif">
+                <div  class="tenor-gif-embed" data-postid="25707820" data-share-method="host" data-aspect-ratio="1.14286" data-width="100%"><a href="https://tenor.com/view/tenor-gif-25707820">Tenor GIF</a>from <a href="https://tenor.com/search/tenor-gifs">Tenor GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+                </div>
+                <button class="border-2 p-3 rounded-lg bg-gradient-to-r from-sky-300 to-sky-700 text-white"> Restart</button>
             </div>
         </div>
     </div>
